--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "firebase": "^7.6.1",
     "formik": "^2.1.1",
     "lodash": "^4.17.15",
+    "lodash.debounce": "^4.0.8",
+    "lodash.omit": "^4.5.0",
     "nanoid": "^2.1.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-json-pretty": "^2.2.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8"
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.9.0",
